# cryptax-br

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/integrations/exchanges/: base.py  binance.py  ccxt_exchange.py
backend/app/integrations/onchain/: base.py  bitcoin.py  evm.py  solana.py
backend/app/integrations/prices/: coingecko.py
backend/app/models/: __init__.py  price.py  sync_log.py  transaction.py  wallet.py
backend/app/routers/: sync.py  tax.py  transactions.py  wallets.py
backend/app/schemas/: __init__.py  tax.py  transaction.py  wallet.py
backend/app/services/: crypto.py  self_transfer_detector.py  sync_service.py  tax_engine.py
backend/tests/: test_onchain_btc_sol.py  test_pending_transfers.py  test_self_transfer_detector.py  test_tax_engine.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/transactions/: page.tsx
frontend/src/app/(app)/wallets/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/sync/: page.tsx
frontend/src/app/tax/1888/: page.tsx
frontend/src/app/tax/coaf/: page.tsx
frontend/src/app/tax/darf/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/wallets/: page.tsx
frontend/src/components/: Sidebar.tsx  TaxExplainer.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts
(+6 files in other folders)
